[gd_scene load_steps=48 format=2]

[ext_resource path="res://Assets/World/Tower/towerSlice8.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Assets/World/Tower/towerSlice10.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/World/Tower/towerSlice2.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/World/Tower/towerSlice12.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/World/Tower/towerSlice7.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/World/Tower/towerSlice11.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/World/Tower/towerSlice3.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/World/Tower/towerSlice6.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/World/Tower/tower.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/World/Tower/towerSlice5.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Assets/World/Tower/towerSlice9.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Assets/World/Tower/towerSlice13.obj" type="ArrayMesh" id=12]
[ext_resource path="res://Assets/World/Tower/towerSlice4.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Assets/World/Tower/towerSlice1.obj" type="ArrayMesh" id=14]
[ext_resource path="res://Objects/AnimationObject.gd" type="Script" id=15]
[ext_resource path="res://Assets/World/Tower/Tower.gd" type="Script" id=16]
[ext_resource path="res://Assets/World/Tower/tower.png" type="Texture" id=17]
[ext_resource path="res://Assets/World/Tower/towerSlice11.png" type="Texture" id=18]
[ext_resource path="res://Assets/World/Tower/towerSlice12.png" type="Texture" id=19]
[ext_resource path="res://Assets/World/Tower/towerSlice13.png" type="Texture" id=20]
[ext_resource path="res://Assets/World/Tower/towerSlice4.png" type="Texture" id=21]
[ext_resource path="res://Assets/World/Tower/towerSlice1.png" type="Texture" id=22]
[ext_resource path="res://Assets/World/Tower/towerSlice8.png" type="Texture" id=23]
[ext_resource path="res://Assets/World/Tower/towerSlice5.png" type="Texture" id=24]
[ext_resource path="res://Assets/World/Tower/towerSlice6.png" type="Texture" id=25]
[ext_resource path="res://Assets/World/Tower/towerSlice7.png" type="Texture" id=26]
[ext_resource path="res://Assets/World/Tower/towerSlice3.png" type="Texture" id=27]
[ext_resource path="res://Assets/World/Tower/towerSlice2.png" type="Texture" id=28]
[ext_resource path="res://Assets/World/Tower/towerSlice10.png" type="Texture" id=29]
[ext_resource path="res://Assets/World/Tower/towerSlice9.png" type="Texture" id=30]
[ext_resource path="res://Sounds/towerfall.wav" type="AudioStream" id=31]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.17773, 1, 3.22153 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 17 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 22 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 28 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 27 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 21 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 24 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 25 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 26 )

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 23 )

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 30 )

[sub_resource type="SpatialMaterial" id=12]
albedo_texture = ExtResource( 29 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 18 )

[sub_resource type="SpatialMaterial" id=14]
albedo_texture = ExtResource( 19 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 20 )

[sub_resource type="BoxShape" id=16]

[node name="TowerPiece" type="KinematicBody"]
transform = Transform( 0.8, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 0 )
collision_layer = 2
collision_mask = 2050
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.505, 0, 0, 0, 3, 0, 0, 0, 0.505, 0, -2.862, 0 )
shape = SubResource( 1 )

[node name="tower" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 3, 0, 0, 0, 0.5, -1.605, -43.6661, 1.604 )
mesh = ExtResource( 9 )
material/0 = SubResource( 2 )

[node name="AnimationObject" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, -1.60249, -1.9093, 1.60117 )
script = ExtResource( 15 )
frame_rate = 0.2
run_once = true
playing = false

[node name="towerSlice1" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 3 )
mesh = ExtResource( 14 )
material/0 = null

[node name="towerSlice2" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 4 )
mesh = ExtResource( 3 )
material/0 = null

[node name="towerSlice3" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 5 )
mesh = ExtResource( 7 )
material/0 = null

[node name="towerSlice4" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 6 )
mesh = ExtResource( 13 )
material/0 = null

[node name="towerSlice5" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 7 )
mesh = ExtResource( 10 )
material/0 = null

[node name="towerSlice6" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 8 )
mesh = ExtResource( 8 )
material/0 = null

[node name="towerSlice7" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 9 )
mesh = ExtResource( 5 )
material/0 = null

[node name="towerSlice8" type="MeshInstance" parent="AnimationObject"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0, 0 )
visible = false
material_override = SubResource( 10 )
mesh = ExtResource( 1 )
material/0 = null

[node name="towerSlice9" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 11 )
mesh = ExtResource( 11 )
material/0 = null

[node name="towerSlice10" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 12 )
mesh = ExtResource( 2 )
material/0 = null

[node name="towerSlice11" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 13 )
mesh = ExtResource( 6 )
material/0 = null

[node name="towerSlice12" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 14 )
mesh = ExtResource( 4 )
material/0 = null

[node name="towerSlice13" type="MeshInstance" parent="AnimationObject"]
visible = false
material_override = SubResource( 15 )
mesh = ExtResource( 12 )
material/0 = null

[node name="RemoveArea" type="Area" parent="."]
transform = Transform( 1.589, 0, 0, 0, 0.5, 0, 0, 0, 1.602, 0, 0.582091, 0 )
input_ray_pickable = false
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="RemoveArea"]
shape = SubResource( 16 )

[node name="fallSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 31 )
unit_db = 8.205
bus = "Sounds"
